[tool.poetry]
name = "jigsaw-puzzle"
version = "0.1.0"
description = ""
authors = ["Erik Eng <ferikeng@gmail.com>"]
readme = "README.md"
packages = [{include = "jigsaw_puzzle"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
